# linguify

./: .coverage  .env.example  .gitattributes  .gitignore  AUTHENTICATION_SYSTEM_ENHANCED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION_TEST_GUIDE.md  Makefile  NOTIFICATION_REFACTORING.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  SECURITY.md  TAILWIND_HTMX_GUIDE.md  TEACHING_GUIDE.md  TEACHING_STATUS.md  backup_db.sh  build-tailwind.js  check-env.sh  create_student_profiles.py  create_students_shell.py  create_tenant_admin.py  db.sqlite3  debug-jwt.sh  debug_portal.py  debug_user.py  dev.sh  guide_configuration_supabase.md  install_all_deps.sh  linguify-bin  linguify-notebook-app-seo-article.md  manage.py  migrate_tenants.py  notebook-revision-integration-plan.md  package-lock.json  package.json  python  render-complete.yaml  (+20 more)
backend/: .env.example  2025-07-18-this-session-is-being-continued-from-a-previous-co.txt  2025-07-20-this-session-is-being-continued-from-a-previous-co.txt  AUTO_APP_DISCOVERY.md  HTMX_CONVERSION_GUIDE.md  Makefile  Readme.md  SETTINGS_JS_ARCHITECTURE.md  add_missing_translations.py  app_ecosystem_report.json  app_revision_20250803_180534.json  build.sh  check_adaptive.py  check_apps.py  clean_and_disable_translations.py  clothing_vocabulary.json  compile_translations_manual.py  complete_all_translations.py  conftest.py  create_notification.py  db_linguify  debug_auth.py  debug_connection.py  debug_dashboard.py  debug_email.py  debug_reminders.py  debug_test_recap.py  disable_contenttypes.py  docker-compose.override.yml  docker-compose.redis.yml  docker-compose.yml  fix_content_type.py  fix_content_types_manual.py  fix_db_sequences.py  fix_sequences.bat  fix_sequences_simple.py  fix_sequences_windows.ps1  fix_user_registration.py  insert_test_courses.py  install_and_compile_translations.py  (+47 more)
backend/app_manager/: admin.py  apps.py  context_processors.py  icon_views.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/authentication/: README.md  admin.py  apps.py  auth0_auth.py  auth0_backend.py  debug_views.py  middleware.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py  viewsets.py
backend/cards/: views.py
backend/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py
backend/coaching/: apps.py  models.py  views.py
backend/community/: models.py
backend/core/: TAGS_MANIFEST.py  admin.py  app_registry.py  app_synergies.py  apps.py  asgi.py  favicon_views.py  models.py  seo_middleware.py  settings.py  settings_debug.py  settings_dev.py  settings_frontend.py  settings_test.py  sitemap_views.py  sitemaps.py  subscription_models.py  urls.py  urls.py.enhancement  utils.py  views.py  views_legacy.py
backend/course/: __init__.py  admin.py  forms.py  models.py  progress.py  serializers.py  signals.py  urls.py  views.py
backend/data_management/: bulk_import.py  create_unit.py  import_vocabulary.py  import_vocabulary_lists.py  vocabulary_list.csv
backend/django_apps/: routers.py
backend/docs/: FULLSTACK.md  IMPORTATION.md  NOTES.md
backend/enhanced_admin/: README.md  admin_filters.py
backend/flashcard/: apps.py  models.py  serializers.py  urls.py  views.py
backend/frontend_web/: HEADER_FOOTER_UNIFIED.md  __init__.py  apps.py  urls.py  views.py
backend/media/: .gitkeep
backend/myenv/: pyvenv.cfg
backend/notebook/: models.py  serializers.py  urls.py  views.py
backend/payments/: urls.py  views.py
backend/progress/: admin.py  urls.py
backend/public_web/: apps.py  urls.py  utils.py  views.py
backend/quiz/: models.py  views.py
backend/revision/: admin.py  models.py  serializers.py  urls.py  views.py
backend/saas_web/: apps.py  middleware.py  urls.py  views.py
backend/scripts/: README.md  README_SCRIPTS_UPDATE.md  README_VOCABULARY_SYSTEM.md  auto_reminder_loop.py  check_env.py  check_prod_apps.py  create_complete_app.py  create_complete_app_fixed.py  (+17 more)
portal/: .env.example  .renderignore  =2.16.0  DEPLOYMENT_FIX.md  README.md  build.sh  build_fallback.sh  debug_deployment.py  manage.py  portal_views.py  pyproject.toml  render_dashboard_commands.md  requirements.txt  start.sh  validate_env.py  verify_deployment.py
(+3593 files in other folders)
