[tool.poetry]
name = "linguify-portal"
version = "1.0.0"
description = "OpenLinguify Portal - Landing page and public website"
authors = ["OpenLinguify Team <dev@openlinguify.com>"]
readme = "README.md"
packages = [{include = "portal"}, {include = "public_web"}, {include = "blog"}, {include = "jobs"}, {include = "docs"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
Django = ">=5.0,<6.0"
django-environ = ">=0.11.0"
dj-database-url = ">=2.1.0"
psycopg2-binary = ">=2.9.0"
Pillow = ">=10.0.0"
djangorestframework = ">=3.16.0"
supabase = ">=2.16.0"
gunicorn = ">=21.0.0"
markdown = ">=3.5.0"
whitenoise = ">=6.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "portal.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]